Update in UserController and ReligionsController
